crates/kdl-config-derive/tests/ui/children_non_vec.stderr
error: children placement requires Vec<T> field type
 --> tests/ui/children_non_vec.rs:5:5
  |
5 |     #[kdl(children)]
  |     ^
